# stealthmaker

./: .gitignore  CMakeLists.txt  README.md  app.manifest
.cursor/rules/: window-protector-requirements.mdc
doc/: implementation-notes.md
src/: BorderOverlay.cpp  Common.h  ConfigManager.cpp  InjectDll.cpp  Injector.cpp  MainWindow.cpp  MainWindow.h  TrayIcon.cpp  TrayIcon.h  WindowUtils.cpp  main.cpp
